# balances-watcher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.yml  rustfmt.toml
.cargo/: audit.toml
.github/k8s/: deployment.yaml  ingress.yaml  service-monitor.yaml  service.yaml
.github/workflows/: build-and-release.yml  build-image.yml  code-checks.yml  deploy.yml  release.yml
src/: api.rs  app_error.rs  app_state.rs  args.rs  lib.rs  main.rs  metrics.rs
src/api/: client_id_extractor.rs  create_session.rs  create_sse_session.rs  extractors.rs  health.rs  mod.rs  openapi.rs  session_path_extractor.rs  update_session.rs
src/config/: back_off_config.rs  constants.rs  mod.rs  network_config.rs  ws_pool_config.rs
src/domain/: events.rs  evm_network.rs  mod.rs  network.rs  session.rs  token.rs
src/evm/: mod.rs
src/graceful_shutdown/: mod.rs
src/routes/: create_router.rs
src/services/: balance_fetcher.rs  block_watcher.rs  calls_queue.rs  cleanup_stream.rs  errors.rs  event_dispatcher.rs  fetch_balances_via_multicall.rs  health.rs  mod.rs  rpc_client.rs  session_manager.rs  snapshot_updater.rs  subscription.rs  subscription_manager.rs  token_list_fetcher.rs  url_guard.rs  watcher.rs  ws_connection_pool.rs
src/ws_connection/: mod.rs
src/ws_provider/: mod.rs
tests/: integration.rs  session_lifecycle.rs  session_race.rs  stall_health.rs  token_list_update.rs  token_list_url_guard.rs
tests/common/: api.rs  env.rs  mod.rs  onchain.rs
