[package]
name = "balances-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1"
clap = { version = "4.6.1", features = ["env", "derive"] }
alloy = { version = "2.0.4", features = ["provider-ws", "getrandom"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
metrics = "0.24.5"
metrics-exporter-prometheus = "0.18.3"
rustls = { version = "0.23.40", features = ["ring"], default-features = false }
backon = "1.6.0"
uuid = { version = "1.23.1", features = ["v4"] }
moka = { version = "0.12.15", features = ["future"] }

[dev-dependencies]
wiremock = "0.6.5"
serde_json="1.0.149"
