[package]
name = "balances-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.32"
tokio-stream = "0.1.18"
clap = { version = "4.6.1", features = ["env", "derive"] }
alloy = { version = "2.0.4", features = ["provider-ws", "getrandom", "node-bindings", "sol-types", "contract", "signers", "signer-local"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
rustls = { version = "0.23.40", features = ["ring"], default-features = false }
backon = "1.6.0"
uuid = { version = "1.23.4", features = ["serde"] }
moka = { version = "0.12.15", features = ["future"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }

[dev-dependencies]
wiremock = "0.6.5"
serde_json = "1.0.149"
hex = "0.4"
eventsource-stream = "0.2"
